# forry4.github.io

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Procfile  README.md  _v4_ab.py  _v4_ab_l1open.py  _v4_aggr.py  _v4_combo.py  _v4_confirm.py  _v4_confirm_engdecay.py  _v4_confirm_hoard.py  _v4_confirm_r4.py  _v4_cost.py  _v4_costconfirm.py  _v4_diag2.py  _v4_diag_opp.py  _v4_endgame_diag.py  _v4_eng_tta.py  _v4_green_check.py  _v4_hoard.py  _v4_l1_tta.py  _v4_mcts.py  _v4_mistakes.py  _v4_paironce.py  _v4_search.py  _v4_sensitivity.py  _v4_spread.py  _v4_strong.py  _v4_styles.py  _v4_take_diag.py  _v4_test.py  _v4_tta.py  _v4_tune.py  _v4_tune2.py  _v4_tune3.py  _v4_tune4.py  _v4_tune5.py  (+12 more)
_oldH2_backup/: heuristic2.py
assets/: index-HvtvohcD.js
books/: Books.jsx  __init__.py  api.py
spender-core/: .gitignore  Cargo.toml
spender-core/src/: actions.rs  attn.rs  attn_model.json  cards.rs  endgame.rs  engine.rs  feats.rs  heuristic.rs  lib.rs  mcts.rs  n_model.json  pv_model.json  pv_model_21.json  rng.rs  turns.rs  turns_table.rs  v_state.rs  valuation.rs  valuenet.rs  vsearch.rs  wasm.rs
spender-core/tests/: actionmove_parity.rs  endgame.rs  engine_parity.rs  policy_parity.rs  scalar_parity.rs  search_smoke.rs  valuation_parity.rs  vstate_parity.rs
spender-core/tests/common/: mod.rs
spender-core/tools/: client_ai_e2e.py  gen_actionmove_fixtures.py  gen_cards.py  gen_engine_fixtures.py  gen_policy_fixtures.py  gen_scalar_fixtures.py  gen_turns.py  gen_valuation_fixtures.py  gen_vstate_fixtures.py  selfgate_cross.py  wasm_e2e.py
(+354 files in other folders)
